# dzsungel-fm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-single-platform.yml
include/dzsungel/: constants.h  types.hpp
include/dzsungel/data/: Programs.hpp
include/dzsungel/dsp/: adsr.h  noise.h  oscillator.h  wavetablegen.h
include/dzsungel/io/: wav.h
include/dzsungel/synth/: MidiPreprocessor.hpp  SynthVoice.hpp  VoiceManager.hpp  Voices.hpp
include/phase-mod-demo/: adsr.h  constants.h  oscillator.h  wavetablegen.h
include/phase-mod-demo/dsp/: adsr.h  noise.h  oscillator.h  wavetablegen.h
include/phase-mod-demo/io/: wav.h
include/phase-mod-demo/synth/: SynthVoice.hpp  VoiceManager.hpp
proof-of-concept/: calculateSines.py
src/: adsr.c  main-fpu.c  new-main.cpp  oscillator.c  sine-fixed.c  sine-fpu.c  wavetablegen.c
src/data/: Programs.cpp
src/dsp/: adsr.c  noise.cpp  oscillator.c  wavetablegen.c
src/io/: wav.c
src/synth/: MidiPreprocessor.cpp  SynthVoice.cpp  VoiceManager.cpp  Voices.cpp  voice.c
